--- a/custom_components/periodic_min_max/translations/en.json
+++ b/custom_components/periodic_min_max/translations/en.json
@@ -35,8 +35,8 @@
             "name": "Reset",
             "description": "Reset the Periodic Min Max sensor.",
             "fields": {
-                "config_entry_id": {
-                    "name": "Periodic Min Max",
+                "entity_id": {
+                    "name": "Entity",
                     "description": "Select the Periodic Min Max sensor."
                 }
             }
